--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<head>
+  <meta charset="UTF-8">
+  <title>Riyanka's Portfolio</title>
+</head>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<body>
+  <h1>Riyanka's portfolio</h1>
+  <h2>I'm a Web Developer</h2>
+  <hr />
+  <h3><a href="./public/k-drama ranking.html">k-drama ranking Project</a></h3>
+  <img src="./assets/images/k-drama ranking.jpg" height="400" alt="k-drama ranking"/>
+  <h3><a href="./public/my birthday invite.html">my birthday invite</a></h3>
+  <img src="./assets/images/my birthday invite.png" height="400" alt="my birthday invite"/>
+  <hr />
+  <h4><a href="./public/about.html">About Me</a></h4>
+  <h4><a href="./public/contact.html">Contact Me</a></h4>
+</body>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</html>
